<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="gcm_sender_id">899111105431</string>
    <string name="google_app_id">899111105431</string>

    <!-- Custom authenticators via Placeholder API -->
    <string name="_TS_placeholderauth_display_name_mypl1">Iris scan</string>
    <string name="_TS_placeholderauth_icon_drawable_mypl1">ic_auth_iris_2</string>
    <string name="_TS_placeholderauth_display_name_pl1">Should be password</string>
    <string name="_TS_placeholderauth_icon_drawable_pl1">ic_auth_iris</string>

    <string name="app_name">TransmitSecurityApp</string>
    <string name="_APP_authcontroldemo_action_settings">Demo Settings</string>
    <string name="_APP_authcontroldemo_action_dev_options">[ dev options ]</string>
    <string name="_APP_authcontroldemo_action_oob_config">OOB Configuration</string>
    <string name="_APP_authcontroldemo_action_back">Back</string>
    <string name="_APP_authcontroldemo_action_login">Sign On</string>
    <string name="_APP_authcontroldemo_password">Password</string>
    <string name="_APP_authcontroldemo_action_logout">Logout</string>
    <string name="_APP_authcontroldemo_action_clear_all">Clear All</string>
    <string name="_APP_authcontroldemo_action_about">About</string>
    <string name="_APP_authcontroldemo_action_configure">Configure</string>
    <string name="_TS_authcontroldemo_action_view_balance">View Balance</string>
    <string name="_TS_authcontroldemo_action_transfer">Transfer</string>
    <string name="_TS_authcontroldemo_action_approvals">Approvals</string>
    <string name="_TS_authcontroldemo_action_devices">Devices</string>
    <string name="_TS_authcontroldemo_actionbtn_logout">Logout</string>
    <string name="_TS_authcontroldemo_status_logged_in">Logged in.</string>
    <string name="_TS_authcontroldemo_status_logged_out">Logged out.</string>
    <string name="_APP_authcontroldemo_actionBtn_text">Continue</string>
    <string name="_APP_authcontroldemo_balance_action_back">Back</string>

    <string name="_APP_credentials_passwordED_hint">Password</string>
    <string name="_APP_credentials_change_method">Change Method</string>

    <string name="_APP_credentials_username_error_message">Illegal username provided</string>
    <string name="_APP_credentials_password_error_message">Incorrect credentials entered</string>
    <string name="_APP_credentials_validation_error_message">Credentials validation failed</string>
    <string name="_APP_access_token_error_message">Authorization failed</string>

    <string name="_APP_landing_change_user">Change User</string>
    <string name="_APP_landing_change_auth_method">Choose Authentication Method</string>

    <string name="_APP_landing_fragment_no_user_message">No username is stored in the application</string>
    <string name="_APP_landing_fragment_stored_user_message">The stored application username is: </string>

    <string name="_APP_transfer_to_title">To:</string>
    <string name="_APP_transfer_to_hint">Recipient</string>
    <string name="_APP_transfer_amount_title">Amount:</string>
    <string name="_APP_transfer_amount_hint">Amount</string>
    <string name="_APP_transfer_comment_title">Comment:</string>
    <string name="_APP_transfer_comment_hint">Comment</string>

    <string name="pref_app_id_title">Application ID</string>
    <string name="pref_api_token_name_title">API Token Name</string>
    <string name="pref_api_token_title">API Token</string>

    <string name="pref_faceauth_license_title">Face Recognition License</string>
    <string name="pref_eyeauth_license_title">Eyeprint Recognition License</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_zell">ZellActivity</string>

</resources>
