<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/_APP_authcontroldemo_fragments_background_color">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            style="@style/_APP_credinput_edittextStyle"
            android:layout_marginTop="60dp"
            android:inputType="textWebEmailAddress"
            android:id="@+id/_APP_login_username_ed"
            android:enabled="false"
            android:textColorHint="@color/_APP_edittext_authcontroldemo_hint_color"
            android:textColor="@color/_APP_edittext_authcontroldemo_input_color"
            android:layout_gravity="center_horizontal"/>

        <EditText
            style="@style/_APP_credinput_edittextStyle"
            android:layout_marginTop="40dp"
            android:inputType="textPassword"
            android:id="@+id/_APP_login_password_ed"
            android:textColorHint="@color/_APP_edittext_authcontroldemo_hint_color"
            android:hint="@string/_APP_credentials_passwordED_hint"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        style="@style/_APP_buttonStyle"
        android:text="@string/_APP_authcontroldemo_actionBtn_text"
        android:textColor="@color/_APP_authcontroldemo_message_text_color"
        android:id="@+id/_APP_authcontroldemo_login_btn"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        style="@style/_APP_buttonStyle"
        android:text="@string/_APP_credentials_change_method"
        android:textColor="@color/_APP_authcontroldemo_message_text_color"
        android:id="@+id/_APP_authcontroldemo_change_method_btn"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

</LinearLayout>