

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
      android:layout_gravity="center"
      android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
      android:background="@color/_TS_authcontrol_main_background_color"
     tools:context="com.transmit.authenticationcontroldemo.DemoAppMenuFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00ffffff">

        <ImageButton
            android:id="@+id/imageView_quickviewhack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/quickview" />

        <ImageButton
            android:id="@+id/imageView_quickviewhackside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/quickviewside"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/zellelanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/zellelanding"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/zellechoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/zellechoose"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/zelleinput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/zelleinput"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/zellereviewsend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/zellereviewsend"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/zelledone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:background="#FFFFFF"
            android:src="@drawable/zelledone"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonOpenZelle"
            style="@style/_APP_buttonStyle"
            android:layout_width="300dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView_quickviewhack"
            android:layout_gravity="center"
            android:layout_marginTop="192dp"
            android:text="@string/_APP_authcontroldemo_action_configure"
            android:alpha="0.02"/>
    </RelativeLayout>




    <!--

        <ImageView
        android:id="@+id/imageView_quickviewhack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/quickview" />


    -->
    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/_APP_authcontroldemo_action_configure"
        style="@style/_APP_buttonStyle"
        android:id="@+id/buttonConfigurationMenuItem"
        android:visibility="gone"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/_TS_authcontroldemo_action_devices"
        style="@style/_APP_buttonStyle"
        android:id="@+id/buttonDevicesMenuItem"
        android:visibility="gone"/>



    <Button
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:text="@string/_APP_authcontroldemo_action_logout"
        style="@style/_APP_buttonStyle"
        android:id="@+id/buttonLogoutMenuItem"
        android:visibility="gone"/>




</LinearLayout>
